--- a/tutorial/configuration/metaT/QC_2.yaml
+++ b/tutorial/configuration/metaT/QC_2.yaml
@@ -37,7 +37,7 @@ NAME_host_genome: build_hg18_subset.fna
 
 LOCAL_DATABASE_CACHE_DIR: None
 
-# Which aligner to use for host screening?
+# Which aligner or mapper to use: currently only 'bwa' is supported
 
 ALIGNER_type: bwa
 ALIGNER_threads: 8
