--- a/configuration/QC_2.yaml
+++ b/configuration/QC_2.yaml
@@ -37,7 +37,7 @@ NAME_host_genome: build_hg18_subset.fna
 
 LOCAL_DATABASE_CACHE_DIR: None
 
-# Which aligner or mapper to use: currently only 'bwa' is supported
+# Which aligner or mapper to use: 'bwa' or 'strobealign' is supported
 
 ALIGNER_type: bwa
 ALIGNER_threads: 8
